--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,19 +38,97 @@
 
 
 
+            <RelativeLayout
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="150dp">
+
+                <ImageView
+                    android:layout_marginLeft="16dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/logo"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+
+
+
+
+
+
+            </RelativeLayout>
+
+
+            <Switch
+                android:textSize="16sp"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Automatic Watering  "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Switch
+                android:textSize="16sp"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Water Pump  "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="8dp"
+                android:text="Water Tank Level"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:fontFamily="@font/montserrat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:layout_width="100dp"
+                    android:progress="80"
+                    android:layout_marginTop="27dp"
+                    app:indicatorColor="@android:color/holo_blue_bright"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_height="30dp"/>
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="8dp"
+                    android:text="80 %"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
 
             <TextView
                 android:id="@+id/list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:clickable="true"
 
+                android:textColor="@android:color/black"
                 android:focusable="true"
                 android:fontFamily="@font/montserrat"
-                android:text="  সেহারি ও ইফতারী"
+                android:text="My Plants"
                 android:textSize="16sp"
 
                 app:layout_constraintBottom_toTopOf="@+id/loginid"
