--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/purple_500"
+            android:background="@color/colorPrimary"
             app:titleTextColor="@color/black">
 
             <LinearLayout
@@ -53,7 +53,7 @@
 
         android:paddingTop="3dp"
         android:text="1"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/colorPrimary"
         android:visibility="gone"
         android:textAlignment="center"
         android:textSize="10sp"
