--- a/app/src/main/res/layout/item_my_plants.xml
+++ b/app/src/main/res/layout/item_my_plants.xml
@@ -1,6 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="200dp"
+    android:layout_height="170dp"
+    android:background="@color/white"
+    android:layout_marginLeft="4dp"
+    android:layout_marginTop="8dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="7dp">
+
+
+            <LinearLayout
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="38dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:maxLines="1"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Alovara Proc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:maxLines="1"
+                    android:textColor="@android:color/black"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Moisture Level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.progressindicator.LinearProgressIndicator
+                        android:layout_width="100dp"
+                        android:progress="80"
+                        android:layout_marginTop="8dp"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+
+                        android:layout_marginLeft="8dp"
+                        android:maxLines="1"
+                        android:textColor="@android:color/black"
+                        android:fontFamily="@font/montserrat"
+                        android:text="80%"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_centerHorizontal="true"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:src="@drawable/logo_transparent" />
+    <ImageView
+
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_green" />
+
+</RelativeLayout>
