added switch button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             <RelativeLayout
                 android:background="@color/colorPrimary"
                 android:layout_width="match_parent"
-                android:layout_height="150dp">
+                android:layout_height="165dp">
 
                 <ImageView
                     android:layout_marginLeft="16dp"
@@ -51,6 +51,17 @@
                     android:layout_height="100dp"/>
 
 
+                <TextView
+
+                    android:paddingBottom="5dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="16dp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/montserrat"
+                    android:text="eGarden"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
 
 
@@ -59,6 +70,7 @@
 
 
             <Switch
+                android:id="@+id/auto_watering"
                 android:textSize="16sp"
                 android:fontFamily="@font/montserrat"
                 android:layout_marginLeft="8dp"
@@ -68,6 +80,7 @@
                 android:layout_height="wrap_content"/>
 
             <Switch
+                android:id="@+id/water_pump"
                 android:textSize="16sp"
                 android:fontFamily="@font/montserrat"
                 android:layout_marginLeft="8dp"
@@ -117,7 +130,7 @@
 
 
             <TextView
-                android:id="@+id/list"
+                android:id="@+id/help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
