--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,6 +60,7 @@
                     android:textSize="16sp" />
 
                 <Switch
+                    android:id="@+id/auto_watering"
                     android:textSize="16sp"
                     android:fontFamily="@font/montserrat"
                     android:layout_marginLeft="16dp"
@@ -69,6 +70,7 @@
                     android:layout_height="wrap_content"/>
 
                 <Switch
+                    android:id="@+id/water_pump"
                     android:textSize="16sp"
                     android:fontFamily="@font/montserrat"
                     android:layout_marginLeft="16dp"
@@ -118,6 +120,7 @@
 
                 <TextView
 
+                    android:id="@+id/last_watering"
                     android:drawableLeft="@drawable/ic_clock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
