--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimary">#00B32D</color>
     <color name="purple_700">#00B32D</color>
     <color name="teal_200">#03DA32</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#00B32D</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF1414</color>
 </resources>
