--- a/app/src/main/res/layout/item_my_plants.xml
+++ b/app/src/main/res/layout/item_my_plants.xml
@@ -3,21 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="200dp"
     android:layout_height="170dp"
-    android:background="@color/white"
     android:layout_marginLeft="4dp"
-    android:layout_marginTop="8dp">
-
-
+    android:layout_marginTop="8dp"
+    android:background="@color/white">
 
 
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       >
+        android:layout_height="match_parent">
 
 
         <androidx.cardview.widget.CardView
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
@@ -30,30 +28,31 @@
 
 
             <LinearLayout
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="38dp"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="38dp"
+                android:layout_marginRight="8dp"
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:maxLines="1"
-                    android:textColor="@android:color/black"
                     android:fontFamily="@font/montserrat"
+                    android:maxLines="1"
                     android:text="Alovara Proc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textColor="@android:color/black" />
 
                 <TextView
-                    android:layout_marginTop="8dp"
-                    android:maxLines="1"
-                    android:textColor="@android:color/black"
-                    android:fontFamily="@font/montserrat"
-                    android:text="Moisture Level"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat"
+                    android:maxLines="1"
+                    android:text="Moisture Level"
+                    android:textColor="@android:color/black" />
 
 
                 <LinearLayout
@@ -61,24 +60,24 @@
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.progressindicator.LinearProgressIndicator
+                        android:id="@+id/progress"
                         android:layout_width="100dp"
-                        android:progress="80"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:layout_height="wrap_content"/>
+                        android:progress="80" />
 
                     <TextView
 
-                        android:layout_marginLeft="8dp"
-                        android:maxLines="1"
-                        android:textColor="@android:color/black"
-                        android:fontFamily="@font/montserrat"
-                        android:text="80%"
+                        android:id="@+id/percentage"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:fontFamily="@font/montserrat"
+                        android:maxLines="1"
+                        android:text="80%"
+                        android:textColor="@android:color/black" />
 
                 </LinearLayout>
-
-
 
 
             </LinearLayout>
@@ -90,17 +89,19 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_centerHorizontal="true"
         android:layout_width="100dp"
         android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/logo_transparent" />
+
     <ImageView
 
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="24dp"
-        android:layout_alignParentRight="true"
+        android:id="@+id/im_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="24dp"
         android:src="@drawable/ic_green" />
 
 </RelativeLayout>
