--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF1414</color>
+    <color name="blue">#2196F3</color>
+    <color name="dark_blue">#126DB6</color>
 </resources>
