--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,7 +54,7 @@
 
                     <TextView
 
-                        android:drawableLeft="@drawable/ic_device"
+                        android:drawableLeft="@drawable/sensor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
