--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,20 @@
 
     </RelativeLayout>
 
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="16dp" />
+
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/facebook"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -54,6 +67,7 @@
 
 
         <TextView
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/dark_blue"
@@ -81,11 +95,12 @@
 
 
     <TextView
-        android:fontFamily="@font/montserrat"
-        android:textColor="@android:color/black"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:text="eGarden"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
